feat: add pluggable backpressure strategies with lag-based support for sequential mode
- Refactor BackpressureController to support strategy pattern for metric selection (in-flight or lag)
- Implement lag-based backpressure for sequential processing; in parallel mode, retain in-flight metric
- Update KPipeConsumer to auto-select appropriate backpressure strategy based on processing mode
- Enhance tests to cover lag-based backpressure and strategy selection
- Improve README with detailed documentation on backpressure strategies and sequential vs parallel modes
- Simplify MessageProcessorRegistry pipeline composition using stream reduction